--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -4,7 +4,9 @@ $color-primary: #55c57a;
 $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
 
-$color-grey: #666;
+$color-grey-light-1: #f7f7f7;
+
+$color-grey: #777;
 $color-black: #000;
 $color-white: #fff;
 
