--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -22,7 +22,7 @@
     &--animated {
         position: relative;
         margin: 10rem auto 0;
-        animation: moveCtaBtn 0.7s ease-out;
+        animation: moveCtaBtn 1s ease-out;
         transition: all 0.2s ease;
     }
 
@@ -52,5 +52,29 @@
     &:active {
         transform: translateY(-.3rem);
         box-shadow: 0 .3rem 1rem rgba($color-black, 0.541);
+    }
+}
+
+.btn-text:link,
+.btn-text:visited {
+    display: inline-block;
+    font-size: 2rem;
+    text-decoration: none;
+    color: $color-primary;
+    padding: 3px;
+    border-bottom: 1px solid $color-primary;
+    transition: all .2s;
+
+    &:hover {
+        transform: translateY(-2px);
+        background-color: $color-primary;
+        color: $color-white;
+        border-radius: 2px;
+        box-shadow: 0rem 1rem 2rem rgba($color-black, 0.15);
+    }
+    
+    &:active {
+        transform: translateY(0px);
+        box-shadow: 0rem .5rem 1.5rem rgba($color-black, 0.1);
     }
 }
