--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -3,3 +3,22 @@
     margin-top: -15vh;
     padding: 25vh 0;
 }
+
+.section-features {
+    background-image: linear-gradient(
+        to right bottom,
+        rgba($color-primary-light, 0.3),
+        rgba($color-primary-dark, 0.5)
+        ),
+        url(../img/nat-4.jpg);
+    padding: 20vh 0;
+    margin-top: -11rem;
+    background-size: cover;
+    background-position: center;
+    transform: skewY(-5deg);
+
+    & > * {
+        transform: skewY(5deg);
+    }
+
+}
