--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,10 @@ body {
   margin-bottom: 8rem;
 }
 
+.u-margin-top-big {
+  margin-top: 8rem;
+}
+
 .btn--white {
   background-color: #fff;
   color: #777;
@@ -136,8 +140,15 @@ body {
 .btn--white::after {
   background-color: #fff;
 }
+.btn--green {
+  background-color: #55c57a;
+  color: #fff;
+}
+.btn--green::after {
+  background-color: #55c57a;
+}
 .btn:link, .btn:visited {
-  display: block;
+  display: inline-block;
   width: 30rem;
   padding: 1.5rem 4rem;
   border-radius: 5rem;
@@ -156,7 +167,7 @@ body {
   position: absolute;
   top: 0rem;
   left: 0rem;
-  display: inline-block;
+  display: block;
   border-radius: 5rem;
   height: 100%;
   width: 100%;
@@ -198,6 +209,120 @@ body {
 .btn-text:visited:active {
   transform: translateY(0px);
   box-shadow: 0rem 0.5rem 1.5rem rgba(0, 0, 0, 0.1);
+}
+
+.card {
+  perspective: 150rem;
+  position: relative;
+  height: 50rem;
+}
+.card__side {
+  height: 50rem;
+  border-radius: 4px;
+  box-shadow: 0 1.5rem 3rem rgba(0, 0, 0, 0.3);
+  transition: all 0.5s ease;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  backface-visibility: hidden;
+}
+.card__side--front {
+  background-color: #fff;
+}
+.card__side--back {
+  transform: rotateY(180deg);
+}
+.card__side--back-1 {
+  background-image: linear-gradient(to bottom right, #ffb900, #ff7730);
+}
+.card__side--back-2 {
+  background-image: linear-gradient(to bottom right, #7ed56f, #28b485);
+}
+.card__side--back-3 {
+  background-image: linear-gradient(to bottom right, #2998ff, #5643fa);
+}
+.card:hover .card__side--front {
+  transform: rotateY(-180deg);
+}
+.card:hover .card__side--back {
+  transform: rotateY(0deg);
+}
+.card__picture {
+  height: 45%;
+  background-size: cover;
+  background-position: center;
+  background-blend-mode: screen;
+  clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+}
+.card__picture--1 {
+  background-image: linear-gradient(to right bottom, #ffb900, #ff7730), url(../img/nat-5.jpg);
+}
+.card__picture--2 {
+  background-image: linear-gradient(to right bottom, #7ed56f, #28b485), url(../img/nat-6.jpg);
+}
+.card__picture--3 {
+  background-image: linear-gradient(to right bottom, #2998ff, #5643fa), url(../img/nat-7.jpg);
+}
+.card__heading {
+  font-size: 2.8rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  color: #fff;
+  position: absolute;
+  top: 20%;
+  right: 5%;
+  text-align: right;
+  width: 75%;
+}
+.card__heading-span {
+  padding: 1rem;
+  -webkit-box-decoration-break: clone;
+  box-decoration-break: clone;
+}
+.card__heading-span--1 {
+  background-image: linear-gradient(to right bottom, rgba(255, 185, 0, 0.8), rgba(255, 119, 48, 0.8));
+}
+.card__heading-span--2 {
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8));
+}
+.card__heading-span--3 {
+  background-image: linear-gradient(to right bottom, rgba(41, 152, 255, 0.8), rgba(86, 67, 250, 0.8));
+}
+.card__details {
+  padding-top: 1rem;
+}
+.card__details ul {
+  width: 80%;
+  margin: auto;
+  list-style: none;
+  text-align: center;
+  color: #777;
+}
+.card__details ul li:not(:last-child) {
+  border-bottom: dotted #c5c5c5 1px;
+}
+.card__details ul li {
+  padding: 1rem 0;
+  font-size: 1.5rem;
+}
+.card__cta {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+.card__price-box {
+  color: #fff;
+}
+.card__price-only {
+  font-size: 2rem;
+  text-transform: uppercase;
+}
+.card__price-value {
+  font-size: 6rem;
 }
 
 .composition {
@@ -342,17 +467,23 @@ body {
 .section-about {
   background-color: #f7f7f7;
   margin-top: -15vh;
-  padding: 25vh 0;
+  padding: 25vh 0 35vh;
 }
 
 .section-features {
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.3), rgba(40, 180, 133, 0.5)), url(../img/nat-4.jpg);
   padding: 20vh 0;
-  margin-top: -11rem;
+  margin-top: -9rem;
   background-size: cover;
   background-position: center;
   transform: skewY(-5deg);
 }
 .section-features > * {
   transform: skewY(5deg);
+}
+
+.section-tours {
+  background-color: #f7f7f7;
+  padding: 20vh 0;
+  margin-top: -9vh;
 }
