--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,7 +1,7 @@
 .section-about {
     background-color: $color-grey-light-1;
     margin-top: -15vh;
-    padding: 25vh 0;
+    padding: 25vh 0 35vh;
 }
 
 .section-features {
@@ -12,7 +12,7 @@
         ),
         url(../img/nat-4.jpg);
     padding: 20vh 0;
-    margin-top: -11rem;
+    margin-top: -9rem;
     background-size: cover;
     background-position: center;
     transform: skewY(-5deg);
@@ -20,5 +20,12 @@
     & > * {
         transform: skewY(5deg);
     }
+
+}
+
+.section-tours {
+    background-color: $color-grey-light-1;
+    padding: 20vh 0;
+    margin-top: -9vh;
 
 }
