--- a/css/style.css
+++ b/css/style.css
@@ -211,6 +211,69 @@ body {
   box-shadow: 0rem 0.5rem 1.5rem rgba(0, 0, 0, 0.1);
 }
 
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  opacity: 0.3;
+}
+.bg-video__content {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.story {
+  width: 75%;
+  margin: auto;
+  padding: 6rem 5rem;
+  color: #777;
+  background-color: rgba(255, 255, 255, 0.8);
+  box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
+  font-size: 1.6rem;
+  border-radius: 3px;
+  transform: skewX(-10deg);
+}
+.story > * {
+  transform: skewX(10deg);
+}
+.story__shape {
+  width: 15rem;
+  height: 15rem;
+  float: left;
+  margin-right: 3rem;
+  clip-path: circle(50% at 50% 50%);
+  shape-outside: circle(50% at 50% 50%);
+  position: relative;
+  overflow: hidden;
+}
+.story__img {
+  height: 100%;
+  transform: translateX(-4rem) scale(1.3);
+  transition: all 0.5s ease;
+}
+.story__caption {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, 50%);
+  text-align: center;
+  color: #fff;
+  opacity: 0;
+  font-size: 2rem;
+  text-transform: uppercase;
+  transition: all 0.5s ease;
+}
+.story:hover .story__caption {
+  transform: translate(-50%, -50%);
+  opacity: 1;
+}
+.story:hover .story__img {
+  transform: translateX(-4rem) scale(1);
+  filter: blur(3px) brightness(80%);
+}
+
 .card {
   perspective: 150rem;
   position: relative;
@@ -486,4 +549,10 @@ body {
   background-color: #f7f7f7;
   padding: 20vh 0;
   margin-top: -9vh;
+}
+
+.section-stories {
+  padding: 15rem 0;
+  background-color: transparent;
+  position: relative;
 }
