--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -22,3 +22,7 @@ $color-white: #fff;
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
 $gutter-horizontal: 6rem;
+
+// =================== Font Variables =================
+
+$default-font-size: 1.6rem;
