--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,8 @@
 @import "base/utilities";
 
 @import "components/button";
+@import "components/bg-video";
+@import "components/story";
 @import "components/card";
 @import "components/composition";
 @import "components/feature-box";
