--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -29,3 +29,9 @@
     margin-top: -9vh;
 
 }
+
+.section-stories {
+    padding: 15rem 0;
+    background-color: transparent;
+    position: relative;
+}
