Completed section-book

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -12,6 +12,7 @@ $color-tertiary-dark: #5643fa;
 
 $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #c5c5c5;
+$color-grey-light-3: #999;
 
 $color-grey: #777;
 $color-black: #000;
