--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -17,6 +17,7 @@
         }
     }
 
+    &,
     &:link,
     &:visited {
         display: inline-block;
@@ -26,6 +27,9 @@
         font-size: 2rem;
         text-decoration: none;
         text-transform: uppercase;
+
+        border: none;
+        cursor: pointer;
     }
     
     &--animated {
