--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,7 @@ body {
 .btn--green::after {
   background-color: #55c57a;
 }
-.btn:link, .btn:visited {
+.btn, .btn:link, .btn:visited {
   display: inline-block;
   width: 30rem;
   padding: 1.5rem 4rem;
@@ -155,6 +155,8 @@ body {
   font-size: 2rem;
   text-decoration: none;
   text-transform: uppercase;
+  border: none;
+  cursor: pointer;
 }
 .btn--animated {
   position: relative;
@@ -211,12 +213,95 @@ body {
   box-shadow: 0rem 0.5rem 1.5rem rgba(0, 0, 0, 0.1);
 }
 
+.form__group:not(:last-child) {
+  margin-bottom: 3rem;
+}
+.form__input {
+  padding: 1.5rem 2rem;
+  margin-right: 2rem;
+  border: none;
+  background-color: rgba(255, 255, 255, 0.9);
+  border-radius: 3px;
+  font-size: 1.5rem;
+  font-family: inherit;
+  color: inherit;
+  display: block;
+  width: 90%;
+  border-bottom: 2px solid transparent;
+  transition: all 0.3s ease;
+}
+.form__input::placeholder {
+  color: #999;
+}
+.form__input:focus {
+  outline: none;
+  border-bottom: 2px solid #55c57a;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+}
+.form__input:focus:invalid {
+  border-bottom: 2px solid #ff7730;
+}
+.form__input:focus:valid {
+  border-bottom: 2px solid #55c57a;
+}
+.form__label {
+  font-size: 1.2rem;
+  margin: 1rem 0 0 2rem;
+  transition: all 0.5s ease;
+}
+.form__input:placeholder-shown + .form__label {
+  opacity: 0;
+  visibility: hidden;
+}
+.form__radio-group {
+  display: inline-block;
+  width: 49%;
+  position: relative;
+}
+.form__radio-input {
+  opacity: 0;
+}
+.form__radio-input:checked + .form__radio-label .form__radio-button::after {
+  opacity: 1;
+}
+.form__radio-label {
+  cursor: pointer;
+  padding: 2.5rem;
+  font-size: 1.6rem;
+}
+.form__radio-button {
+  height: 3rem;
+  width: 3rem;
+  display: inline-block;
+  border: 5px solid #55c57a;
+  border-radius: 50%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.form__radio-button::after {
+  content: "";
+  display: block;
+  background-color: #55c57a;
+  height: 1.3rem;
+  width: 1.3rem;
+  border-radius: 50%;
+  margin: auto;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .bg-video {
   position: absolute;
   top: 0;
   left: 0;
   z-index: -1;
-  opacity: 0.3;
+  opacity: 0.2;
+  height: 100%;
+  width: 100%;
 }
 .bg-video__content {
   width: 100%;
@@ -555,4 +640,20 @@ body {
   padding: 15rem 0;
   background-color: transparent;
   position: relative;
+}
+
+.section-book {
+  background-image: linear-gradient(to bottom right, #7ed56f, #28b485);
+  padding: 15rem 0;
+}
+
+.book {
+  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(../img/nat-10.jpg);
+  background-size: cover;
+  border-radius: 3px;
+  box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.5);
+}
+.book__form {
+  width: 50%;
+  padding: 6rem;
 }
