--- a/sass/components/_bg-video.scss
+++ b/sass/components/_bg-video.scss
@@ -3,7 +3,9 @@
     top: 0;
     left: 0;
     z-index: -1;
-    opacity: .3;
+    opacity: .2;
+    height: 100%;
+    width: 100%;
 
     &__content {
         width: 100%;
