--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -14,6 +14,8 @@ $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #c5c5c5;
 $color-grey-light-3: #999;
 
+$color-grey-dark-1: #333;
+
 $color-grey: #777;
 $color-black: #000;
 $color-white: #fff;
