--- a/css/style.css
+++ b/css/style.css
@@ -574,6 +574,52 @@ body {
   transform: translate(-50%, -75%);
 }
 
+.footer {
+  background-color: #333;
+  padding: 10rem 0;
+  font-size: 1.4rem;
+}
+.footer__logo-box {
+  text-align: center;
+  margin-bottom: 8rem;
+}
+.footer__logo {
+  width: 15rem;
+  height: auto;
+}
+.footer__navigation {
+  border-top: 1px solid #c5c5c5;
+  padding-top: 2rem;
+  display: inline-block;
+}
+.footer__list {
+  list-style: none;
+}
+.footer__item {
+  display: inline-block;
+}
+.footer__item:not(:last-child) {
+  margin-right: 3rem;
+}
+.footer__link:link, .footer__link:visited {
+  color: #c5c5c5;
+  text-decoration: none;
+  text-transform: uppercase;
+  display: inline-block;
+  transition: all 0.3s ease;
+}
+.footer__link:hover, .footer__linkactive {
+  background-image: linear-gradient(to right, #7ed56f, #28b485);
+  -webkit-background-clip: text;
+  color: transparent;
+  transform: scale(1.1) rotate(5deg);
+}
+.footer__copyright {
+  border-top: 1px solid #c5c5c5;
+  padding-top: 2rem;
+  color: #f7f7f7;
+}
+
 .row {
   color: #000;
   max-width: 114rem;
