--- a/css/style.css
+++ b/css/style.css
@@ -549,6 +549,120 @@ body {
   box-shadow: 0 0.7rem 2rem rgba(0, 0, 0, 0.2);
 }
 
+.navigation__checkbox {
+  display: none;
+}
+.navigation__checkbox:checked ~ .navigation__background {
+  transform: scale(100);
+}
+.navigation__checkbox:checked ~ .navigation__nav {
+  opacity: 1;
+  width: 100vw;
+}
+.navigation__checkbox:checked ~ .navigation__nav .navigation__list {
+  transform: translate(-50%, -50%);
+}
+.navigation__button {
+  height: 7rem;
+  width: 7rem;
+  border-radius: 50%;
+  background-color: #fff;
+  box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  position: fixed;
+  top: 3.5rem;
+  right: 3.5rem;
+  z-index: 12;
+}
+.navigation__background {
+  height: 6rem;
+  width: 6rem;
+  border-radius: 50%;
+  background-image: radial-gradient(#7ed56f, #28b485);
+  position: fixed;
+  top: 4rem;
+  right: 4rem;
+  z-index: 10;
+  transition: all 0.5s ease;
+}
+.navigation__nav {
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 11;
+  transition: opacity 0.8s;
+  opacity: 0;
+  width: 0;
+}
+.navigation__list {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-450%, -50%);
+  transition: all 0.8s cubic-bezier(0.08, 1.54, 0.67, 0.95);
+  list-style: none;
+  text-align: center;
+}
+.navigation__item {
+  margin: 1rem;
+}
+.navigation__link:link, .navigation__link:visited {
+  display: block;
+  padding: 1rem 2rem;
+  font-size: 3rem;
+  font-weight: 300;
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  background-image: linear-gradient(120deg, transparent 50%, #fff 50%);
+  background-size: 200%;
+  transition: all 0.4s ease;
+}
+.navigation__link:hover, .navigation__link:active {
+  background-position: 100%;
+  color: #55c57a;
+  transform: translateX(1rem);
+}
+.navigation__icon {
+  position: relative;
+  margin: 3.5rem auto;
+}
+.navigation__icon, .navigation__icon::before, .navigation__icon::after {
+  width: 3rem;
+  height: 2px;
+  background-color: #333;
+  display: block;
+}
+.navigation__icon::before, .navigation__icon::after {
+  content: "";
+  position: absolute;
+  transition: all 0.3s;
+}
+.navigation__icon::before {
+  top: -1rem;
+}
+.navigation__icon::after {
+  top: 1rem;
+}
+.navigation__button:hover .navigation__icon::before {
+  top: -1.5rem;
+}
+.navigation__button:hover .navigation__icon::after {
+  top: 1.5rem;
+}
+.navigation__checkbox:checked ~ .navigation__button .navigation__icon {
+  background-color: transparent;
+}
+.navigation__checkbox:checked ~ .navigation__button .navigation__icon::before {
+  transform: rotate(135deg);
+  top: 0;
+}
+.navigation__checkbox:checked ~ .navigation__button .navigation__icon::after {
+  transform: rotate(-135deg);
+  top: 0;
+}
+
 /* --------------------Header styling--------------------- */
 .header {
   position: relative;
